# zkDrop

./: .gitignore  README.md  aleo_create_account.sh  example copy 2.txt  log.temp  pyqt_zkdrop.ui  pyqt_zkdrop_kyc.ui  pyqt_zkdrop_new_account.ui  pyqt_zkdrop_received_files.ui  pyumbral_decrypt.py  pyumbral_encrypt.py  pyumbral_generate_keys_from_aleo.py  pyumbral_generate_keys_from_aleo_kfrags.py  pyumbral_network_encryption.py  requirements.txt  zkDrop.py  zkDropGUI-resources.qrc  zkdrop_get_nucypher_public_key.py  zkdrop_qr.py  zkdrop_qt.py  zkdrop_qt_tmp.py
aleo_create_account/: Cargo.toml
aleo_create_account/src/: main.rs
aleo_create_account_package/: .gitignore  Cargo.toml  pyproject.toml
aleo_create_account_package/src/: lib.rs
aleo_sign_verify/: Cargo.toml
aleo_sign_verify/src/: main.rs
encrypted_files_tmp/: capsule_0af39baef92fe243d98d9c1bece63335  capsule_847ecf8fef6970a2dd720b684cb57f6c  capsule_a659ce6965d5049f664d728c5069f8ce  capsule_d72fbb7327b17528211031fb6dcd9259  ciphertext_0af39baef92fe243d98d9c1bece63335  ciphertext_847ecf8fef6970a2dd720b684cb57f6c  ciphertext_a659ce6965d5049f664d728c5069f8ce  ciphertext_d72fbb7327b17528211031fb6dcd9259  kfrags_0af39baef92fe243d98d9c1bece63335  kfrags_847ecf8fef6970a2dd720b684cb57f6c  kfrags_a659ce6965d5049f664d728c5069f8ce  kfrags_d72fbb7327b17528211031fb6dcd9259
lib/: keys.py
received_files/: QmRsTuHKkpP6mDMctpTpos12aJf5izLYdoTxg1TWp7EqEF.txt  QmSVbykgxnbM99EC9E5CbTedmsgpJTHq6NRLzWjExxyShw.txt  QmTNiVW4Y6daxEBvewwzLWv23cpQmZzLzoziyQTA5cafnN.txt  QmWqTuC1n5keeLXFnwGHjQHQPDaZaAcXTzQGBCWHRhVKBd.txt  (+3 more)
