[package]
name = "aleo_create_account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.snarkvm]
version = "0.9.0"

[dependencies.snarkvm-console]
version = "0.9.0"

[dependencies.anyhow]
version = "1.0"

[dependencies.clap]
version = "3.2"
features = [ "derive" ]

[dependencies.colored]
version = "2"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false